--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,19 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
-   - export DISPLAY=:99.0
-   - sh -e /etc/init.d/xvfb start
-   - pip install cython
-install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sudo apt-get update
   - sudo apt-get install python-vtk python-qt4 python-qt4-dev python-sip python-qt4-gl libqt4-scripttools swig
+install:
+  - pip install cython
+  - pip install coveralls
   - pip install -r dev_requirements.txt --use-mirrors
   - python setup.py develop
 script:
-  unit2 discover -v
+  coverage run -m nose.core -v
 notifications:
   email:
     - travis-ci@enthought.com
+after_success:
+  coveralls
