--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install coveralls
   - pip install -r dev_requirements.txt --use-mirrors
   - python setup.py develop
+  - export ETS_TOOLKIT=qt4
 script:
   coverage run -m nose.core -v
 notifications:
