--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - pip install cython
   - pip install coveralls
-  - pip install -r dev_requirements.txt --use-mirrors
+  - pip install -r dev_requirements.txt
   - python setup.py develop
   - export ETS_TOOLKIT=qt4
 script:
