--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - mkdir -p "${HOME}/.cache/download"
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - ./install-edm-linux.sh
-  - export PATH="${PATH}:/usr/local/bin"
+  - sh -e install-edm-linux.sh
+  - export PATH="${HOME}/edm/bin:${PATH}"
   - export ETS_TOOLKIT=qt4
   - edm install -y wheel click coverage
 install:
