TST : Skip Volume Viewer tests on Travis
this is because we use a newer version of VTK and mayavi, which need a
newer version of OpenGL, which isn't available on Travis CI at the
moment.

This leads to tracebacks and failures on CI that are related to the
environment and not the package.

For now, we skip these tests on CI but run the tests locally using the
etstool utility test_clean

	modified:   .travis.yml
	modified:   ensemble/volren/tests/test_volume_renderer.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - sh -e install-edm-linux.sh
   - export PATH="${HOME}/edm/bin:${PATH}"
   - export ETS_TOOLKIT=qt4
+  - export IS_CI=1
   - edm install -y wheel click coverage
 install:
   - edm run -- python -m etstool install
